// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flight Reducer SearchSuccess Valid action should update the result 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "date": 2019-11-17T00:00:00.000Z,
          "departureAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "departureBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "destination": "DEL",
          "origin": "BOM",
          "travelOrder": 1,
        },
        "2": Object {
          "date": 2018-12-17T00:00:00.000Z,
          "departureAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "departureBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "destination": "BOM",
          "origin": "GOI",
          "travelOrder": 2,
        },
      },
      "ids": Array [
        1,
        2,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [
      Object {
        "arrivalTime": Object {
          "hours": 16,
          "minutes": 19,
        },
        "date": 2019-11-17T00:00:00.000Z,
        "departureTime": Object {
          "hours": 9,
          "minutes": 20,
        },
        "destination": "DEL",
        "duration": Object {
          "hours": 7,
          "minutes": 10,
        },
        "flightNo": "6E-123",
        "name": "indigo",
        "origin": "BOM",
        "price": 1,
        "travelOrder": 1,
      },
    ],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer Unknown action should return the initial state 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {},
      "ids": Array [],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer Unknown action should return the initial state for undefined initial state input 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {},
      "ids": Array [],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer UpdateFlightSearchDetails Valid action should return the added FlightSearchDetailsState 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "date": 2018-12-17T00:00:00.000Z,
          "departureAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "departureBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "destination": "GOI",
          "origin": "BOM",
          "travelOrder": 1,
        },
      },
      "ids": Array [
        1,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer UpdateFlightSearchDetails Valid action should return the added FlightSearchDetailsState 2`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "date": 2019-11-17T00:00:00.000Z,
          "departureAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "departureBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "destination": "DEL",
          "origin": "BOM",
          "travelOrder": 1,
        },
        "2": Object {
          "date": 2018-12-17T00:00:00.000Z,
          "departureAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "departureBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "destination": "BOM",
          "origin": "GOI",
          "travelOrder": 2,
        },
      },
      "ids": Array [
        1,
        2,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;

exports[`Flight Reducer UpdateFlightSearchDetails Valid action should return the updated FlightSearchDetailsState 1`] = `
Object {
  "criteria": Object {
    "bags": 1,
    "flightSearchDetails": Object {
      "entities": Object {
        "1": Object {
          "date": 2019-11-17T00:00:00.000Z,
          "departureAfterTime": Object {
            "hours": 9,
            "minutes": 20,
          },
          "departureBeforeTime": Object {
            "hours": 16,
            "minutes": 19,
          },
          "destination": "DEL",
          "origin": "BOM",
          "travelOrder": 1,
        },
      },
      "ids": Array [
        1,
      ],
    },
    "passengers": Array [],
    "price": 0,
    "stops": 10,
    "travelClass": "Economy",
    "travelType": "Round trip",
  },
  "name": "Flight Store",
  "result": Object {
    "flightDetails": Array [],
    "sortBy": "Best Flights",
  },
}
`;
